<resources>
    <string name="app_name">Health Monitor</string>
    <string name="patient_info">Patient Info</string>
    <string name="plot_graph">Vitals</string>

    <!-- Splash Screen -->
    <string name="health_monitoring">Health Monitoring</string>
    <string name="start_monitoring">START MONITORING</string>

    <!-- Patient Info -->
    <string name="enter_patient_details">Enter Patient Details</string>
    <string name="patient_info_name">Name</string>
    <string name="patient_info_ID">ID</string>
    <string name="patient_info_age">AGE</string>
    <string name="colon">:</string>
    <string name="patient_info_sex">SEX</string>
    <string name="patient_info_sex_male">Male</string>
    <string name="patient_info_sex_female">Female</string>
    <string name="patient_info_submit_details">Submit Details</string>
    <string name="patient_info_download_db">DOWNLOAD DB</string>

    <!-- Plot Graph -->
    <string name="plot_graph_run">RUN</string>
    <string name="plot_graph_stop">STOP</string>
    <string name="plot_graph_upload_db">UPLOAD DB</string>
    <string name="plot_graph_info">Stop the Graph to enable UPLOAD DB</string>
    <string name="plot_graph_resume_vitals">Press RUN to resume monitoring Vitals</string>


</resources>
